--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+	implementation 'mysql:mysql-connector-java'
 }
 
 tasks.named('test') {
