--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # database
-spring.datasource.url=jdbc:mysql://3.39.206.71:3306/peanart?characterEncoding=utf8
+spring.datasource.url= jdbc:mysql://3.39.206.71:3306/peanart?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis
 mybatis.config=mybatis-config.xml
-mybatis.type-aliases-package=com.peanart.web
-mybatis.mapper-locations=mybatis/mapper/*.xml
+mybatis.type-aliases-package=com.peanart.vo
+mybatis.mapper-locations= mybatis/mapper/*.xml
