--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # database
-spring.datasource.url= jdbc:mysql://3.39.206.71:3306/peanart?characterEncoding=utf8
+#spring.datasource.url= jdbc:mysql://3.39.206.71:3306/peanart?characterEncoding=utf8
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://3.39.206.71:3306/peanart?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis
 mybatis.config=mybatis-config.xml
-mybatis.type-aliases-package=com.peanart.vo
+mybatis.type-aliases-package=com.peanart.vo, com.peanart.member.vo
 mybatis.mapper-locations= mybatis/mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
