--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.datasource.password=1234
 
 # mybatis
 mybatis.config=mybatis-config.xml
-mybatis.type-aliases-package=com.peanart.vo, com.peanart.member.vo
+mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo
 mybatis.mapper-locations= mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.servlet.multipart.location="C:\\Users\\HUSTAR25\\Desktop\\img"
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+
+
