--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,11 @@ mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo
 mybatis.mapper-locations= mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-spring.servlet.multipart.location="C:\\Users\\HUSTAR25\\Desktop\\img"
+spring.servlet.multipart.location=C:\\img
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+
+spring.mvc.view.suffix=.html
+
 
 
