--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=1234
 
 # mybatis
 mybatis.config=mybatis-config.xml
-mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo, com.peanart.Board.vo
+mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo, com.peanart.Board.vo, com.peanart.mypage.vo
 mybatis.mapper-locations= mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
