--- a/build.gradle
+++ b/build.gradle
@@ -59,4 +59,4 @@ task npmBuild(type: NpmTask, dependsOn: ['deleteVueArtifact', 'frontNpmInstall']
     args = ['run', 'build']
 }
 
-processResources.dependsOn 'npmBuild' 
+//processResources.dependsOn 'npmBuild'
