--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=1234
 
 # mybatis
 mybatis.config=mybatis-config.xml
-mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo, com.peanart.Board.vo, com.peanart.mypage.vo, com.peanart.ExhibitRegisteration.vo
+mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo, com.peanart.Board.vo, com.peanart.mypage.vo, com.peanart.ExhibitRegisteration.vo, com.peanart.member.vo
 mybatis.mapper-locations= mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
@@ -17,6 +17,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
 spring.mvc.view.suffix=.html
+
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+
 
 
 
