mypage visited exhib, search filtering 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mybatis.type-aliases-package=com.peanart.main.vo, com.peanart.member.vo, com.pea
 mybatis.mapper-locations= mybatis/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-spring.servlet.multipart.0
+spring.servlet.multipart.location=C:/img
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
