--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.servlet.multipart.max-request-size=50MB
 
 spring.mvc.view.suffix=.html
 
-spring.thymeleaf.prefix=classpath:templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:templates/
+#spring.thymeleaf.suffix=.html
 
 
 
