--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.address=15.164.142.253
+server.port=8080
+
 # database
 #spring.datasource.url= jdbc:mysql://52.79.127.168:3306/peanart?characterEncoding=utf8
 spring.datasource.url=jdbc:log4jdbc:mysql://15.164.142.253:3306/peanart?useUnicode=true&characterEncoding=utf8
