--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:log4jdbc:mysql://52.79.127.168:3306/peanart?useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=root
-spring.datasource.password=pean!@art4k@C#u!f$2@3
+spring.datasource.password=pean!@art4k@c#u!f$2@3
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis
